state data transfer works. Architecture changed.

--- a/app/components/searchPage/searchBlock/searchBlock.html
+++ b/app/components/searchPage/searchBlock/searchBlock.html
@@ -6,3 +6,8 @@
     pretium. Vivamus at neque sit amet dolor tincidunt finibus. Integer eu lobortis diam. Maecenas sodales lorem ac
     lacus rutrum, ut malesuada ante vehicula. Donec lacinia est eu purus aliquam luctus.
 </div>
+<div class="col-lg-3" style="padding: 10px">
+    <input class="form-control" ng-model="searchInput" style="margin: 10px">
+    <button class="btn btn-default" ng-click="getUserInput(searchInput)">Go</button>
+    <button class="btn btn-default">My location</button>
+</div>
