api data viewed, we can load first page and  next pages on click "load more". User can choose  property and look property details on another state.

--- a/app/components/searchPage/header/header.html
+++ b/app/components/searchPage/header/header.html
@@ -1,10 +1,8 @@
-<div class="col-lg-12" style="background-color: aquamarine; padding: 10px">
+<div class="navbar navbar-default">
     <div class="col-lg-8">
         <h1> Property cross</h1>
     </div>
     <div class="col-lg-4 text-right">
         <button class="btn btn-default">Favorites</button>
     </div>
-
-
 </div>
