--- a/app/components/searchPage/searchBlock/searchBlock.html
+++ b/app/components/searchPage/searchBlock/searchBlock.html
@@ -1,4 +1,4 @@
-<div style="margin-top: 100px">
+<div>
     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus eget volutpat lorem. Vivamus a interdum augue,
     vitae viverra massa. Donec vel consequat justo, vel tempus arcu. Donec at orci leo. Praesent vehicula augue a ligula
     congue commodo. Nam vel orci enim. Phasellus viverra, eros convallis mollis scelerisque, ante arcu tincidunt eros,
