--- a/app/components/propertyPage/propertyPage.html
+++ b/app/components/propertyPage/propertyPage.html
@@ -2,12 +2,14 @@
 <div style="height: 20px"></div>
 <div class="thumbnail">
     <div class="col-lg-12 propertyHeader">
-            <button class="btn btn-default">Add to favorites</button>
+            <button class="btn btn-default" ng-click="addToFavorites(propertyInfo)">Add to favorites</button>
             <h4>Property details</h4>
     </div>
     <div class="propertyBody">
         <h2>{{propertyInfo.price_formatted}}</h2>
         <h1>{{propertyInfo.title}}</h1>
         <img ng-src="{{propertyInfo.img_url}}" alt="some error!">
-    </div>
+        <p>{{propertyInfo.bedroom_number}} bedrooms {{propertyInfo.bathroom_number}} bathrooms</p>
+        <p>{{propertyInfo.summary}}</p>
+        </div>
 </div>
