favorites list works, structure changed

--- a/app/components/favorites/favorites.html
+++ b/app/components/favorites/favorites.html
@@ -1,1 +1,4 @@
-{{list.title}}
+<div style="height: 50px"></div>
+<div ng-repeat="item in list">
+    <list-element item="item"></list-element>
+</div>
