--- a/app/components/propertyPage/propertyPage.html
+++ b/app/components/propertyPage/propertyPage.html
@@ -2,7 +2,8 @@
 <div style="height: 20px"></div>
 <div class="thumbnail">
     <div class="col-lg-12 propertyHeader">
-            <button class="btn btn-default" ng-click="addToFavorites(propertyInfo)">Add to favorites</button>
+        <button class="btn btn-default" ng-hide="isAddedToFavorites" ng-click="addToFavorites(propertyInfo)">Add to favorites</button>
+        <button class="btn btn-default" ng-show="isAddedToFavorites" ng-click="removeFromFavorites(propertyInfo)">Remove from favorite</button>
             <h4>Property details</h4>
     </div>
     <div class="propertyBody">
