--- a/app/components/resultListPage/resultListPage.html
+++ b/app/components/resultListPage/resultListPage.html
@@ -1,14 +1,8 @@
 <div style="height: 50px"></div>
-<div class="thumbnail col-lg-offset-2 col-lg-8" ng-repeat="item in propsList track by $index">
-    <div class="col-lg-3" style="padding: 0">
-        <img ng-src={{item.img_url}} style="width: 200px; height: 150px; padding: 25px 10px 10px 10px">
-    </div>
-    <div class="col-lg-9">
-        <h3>{{item.price_formatted}}</h3>
-        <h2>{{item.title}}</h2>
-        <button class="btn btn-info" ng-click="showPropertyInfo(item)">More</button>
-    </div>
+<div ng-repeat="item in propsList track by $index">
+    <list-element item="item"></list-element>
 </div>
+
 <div class="col-lg-12 text-center">
     <a ng-click="loadMore()"><h3>Load more</h3></a>
 </div>
