--- a/app/components/searchPage/searchPage.html
+++ b/app/components/searchPage/searchPage.html
@@ -1,2 +1,21 @@
-<nav-bar></nav-bar>
-<search-block></search-block>
+<div class="navbar navbar-default">
+    <div class="col-lg-8">
+        <h1> Property cross</h1>
+    </div>
+    <div class="col-lg-4 text-right">
+        <button class="btn btn-default" ui-sref="favorites">Favorites</button>
+    </div>
+</div>
+<div>
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus eget volutpat lorem. Vivamus a interdum augue,
+    vitae viverra massa. Donec vel consequat justo, vel tempus arcu. Donec at orci leo. Praesent vehicula augue a ligula
+    congue commodo. Nam vel orci enim. Phasellus viverra, eros convallis mollis scelerisque, ante arcu tincidunt eros,
+    eu imperdiet justo augue id justo. Aenean porttitor arcu at ex faucibus faucibus. Morbi bibendum ut felis at
+    pretium. Vivamus at neque sit amet dolor tincidunt finibus. Integer eu lobortis diam. Maecenas sodales lorem ac
+    lacus rutrum, ut malesuada ante vehicula. Donec lacinia est eu purus aliquam luctus.
+</div>
+<div class="col-lg-3" style="padding: 10px">
+    <input class="form-control" ng-model="searchInput" style="margin: 10px">
+    <button class="btn btn-default" ng-click="getUserInput(searchInput)">Go</button>
+    <button class="btn btn-default">My location</button>
+</div>
