fixed results view quantity and now then results less than 21 button "load more" hiding. ui changed a little bit.

--- a/app/components/propertyPage/propertyPage.html
+++ b/app/components/propertyPage/propertyPage.html
@@ -9,7 +9,7 @@
     <div class="propertyBody">
         <h2>{{propertyInfo.price_formatted}}</h2>
         <h1>{{propertyInfo.title}}</h1>
-        <img ng-src="{{propertyInfo.img_url}}" alt="some error!">
+        <img width="400px" height="300px" ng-src="{{propertyInfo.img_url}}" alt="some error!">
         <p>{{propertyInfo.bedroom_number}} bedrooms {{propertyInfo.bathroom_number}} bathrooms</p>
         <p>{{propertyInfo.summary}}</p>
         </div>
