--- a/app/components/favorites/favorites.html
+++ b/app/components/favorites/favorites.html
@@ -1,4 +1,4 @@
-<div style="height: 50px"></div>
+<h3 ng-show="checkList()" class="text-center">It's empty now</h3>
 <div ng-repeat="item in list">
     <list-element item="item"></list-element>
 </div>
