--- a/app/common/components/listElement/listElement.html
+++ b/app/common/components/listElement/listElement.html
@@ -1,4 +1,4 @@
-<div class="thumbnail col-lg-offset-2 col-lg-8" ng-click="showPropertyInfo($ctrl.item)">
+<div class="thumbnail col-lg-offset-2 col-lg-8 menuItem" ng-click="showPropertyInfo($ctrl.item)">
     <div class="col-lg-3" style="padding: 0">
         <img ng-src={{$ctrl.item.img_url}} style="width: 200px; height: 150px; padding: 25px 10px 10px 10px">
     </div>
