--- a/app/components/propertyPage/propertyPage.html
+++ b/app/components/propertyPage/propertyPage.html
@@ -2,15 +2,15 @@
 <div style="height: 20px"></div>
 <div class="thumbnail">
     <div class="col-lg-12 propertyHeader">
+        <h4>Property details</h4>
         <button class="btn btn-default" ng-hide="isAddedToFavorites" ng-click="addToFavorites(propertyInfo)">Add to favorites</button>
         <button class="btn btn-default" ng-show="isAddedToFavorites" ng-click="removeFromFavorites(propertyInfo)">Remove from favorite</button>
-            <h4>Property details</h4>
     </div>
     <div class="propertyBody">
         <h2>{{propertyInfo.price_formatted}}</h2>
         <h1>{{propertyInfo.title}}</h1>
         <img width="400px" height="300px" ng-src="{{propertyInfo.img_url}}" alt="some error!">
-        <p>{{propertyInfo.bedroom_number}} bedrooms {{propertyInfo.bathroom_number}} bathrooms</p>
+        <p>{{roomsInfo.bedroom}} {{roomsInfo.bathroom}}</p>
         <p>{{propertyInfo.summary}}</p>
         </div>
 </div>
