--- a/app/components/resultListPage/resultListPage.html
+++ b/app/components/resultListPage/resultListPage.html
@@ -1,9 +1,23 @@
-<div style="height: 50px">
+<div class="text-center" ng-show="MainSpinner">
+    <img  src="/app/src/img/ring-alt.gif">
 </div>
-<div ng-repeat="item in propsList track by $index">
-    <list-element item="item"></list-element>
-</div>
+    <div class="text-center" ng-show="showError">
+        <h3 >No results, try again</h3>
+        <h4 ui-sref="searchPage" class="loadMore">go back</h4>
+    </div>
 
-<div class="col-lg-12 text-center">
-    <h2>{{statusInfo}}</h2> <a ng-click="loadMore()" ng-show="checkQuantity"><h3>Load more</h3></a>
-</div>
+    <div ng-hide="showError">
+        <div ng-repeat="item in propsList track by $index">
+            <list-element item="item"></list-element>
+        </div>
+
+        <div class="col-lg-offset-4 col-lg-4 text-center">
+            <img ng-show="LoadMoreSpinner" width="100" height="100"  src="/app/src/img/ring-alt.gif">
+            <div ng-hide="LoadMoreSpinner">
+                <h2>{{statusInfo}}</h2>
+                <a  ng-click="loadMore()" class="loadMore" ng-show="checkQuantity">
+                    <h3>Load more</h3>
+                </a>
+            </div>
+        </div>
+    </div>
