--- a/app/components/searchPage/searchPage.html
+++ b/app/components/searchPage/searchPage.html
@@ -1,12 +1,4 @@
-<div class="navbar navbar-default">
-    <div class="col-lg-8">
-        <h1> Property cross</h1>
-    </div>
-    <div class="col-lg-4 text-right">
-        <button class="btn btn-default" ui-sref="favorites">Favorites</button>
-    </div>
-</div>
-<div>
+<div class="row">
     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus eget volutpat lorem. Vivamus a interdum augue,
     vitae viverra massa. Donec vel consequat justo, vel tempus arcu. Donec at orci leo. Praesent vehicula augue a ligula
     congue commodo. Nam vel orci enim. Phasellus viverra, eros convallis mollis scelerisque, ante arcu tincidunt eros,
@@ -14,11 +6,16 @@
     pretium. Vivamus at neque sit amet dolor tincidunt finibus. Integer eu lobortis diam. Maecenas sodales lorem ac
     lacus rutrum, ut malesuada ante vehicula. Donec lacinia est eu purus aliquam luctus.
 </div>
-<div class="col-lg-3" style="padding: 10px">
-    <input class="form-control" ng-model="searchInput" style="margin: 10px">
-    <button class="btn btn-default" ng-click="getUserInput(searchInput)">Go</button>
-    <button class="btn btn-default">My location</button>
+<div class="col-lg-4">
+    <div class="col-lg-12" style="padding: 0">
+        <input class="form-control" ng-model="searchInput" style="margin-top: 10px">
+        <div style="margin: 10px">
+            <button class="btn btn-default" ng-click="getUserInput(searchInput)">Go</button>
+            <button class="btn btn-default">My location</button>
+        </div>
+    </div>
+    <div class="list-group col-lg-8 row" style="margin-left: 10px">
+        <a class="list-group-item menuItem" ng-repeat="item in searchHistory | limitTo: 10" ng-click="getUserInput(item.input)">{{item.input + ' (' + item.total_results + ')'}}</a>
+    </div>
 </div>
-<ul class="list-group col-lg-11">
-    <li class="list-group-item" ng-repeat="item in searchHistory | limitTo: 10" ng-click="getUserInput(item.input)">{{item.input + ' (' + item.total_results + ')'}}</li>
-</ul>
+
