--- a/app/common/components/header/header.html
+++ b/app/common/components/header/header.html
@@ -2,6 +2,6 @@
         <h3 ui-sref="searchPage" class="logo"> Property cross</h3>
     <div class="col-lg-offset-8" style="margin-top: 20px">
             <span ui-sref="favorites" ui-sref-active="activeState" class="menuItem">Favorites</span>
-            <span ui-sref="resultListPage" ui-sref-active="activeState" class="menuItem" ng-hide="checkInput()">Search result</span>
+            <span ui-sref="resultListPage" ui-sref-active="activeState" class="menuItem" ng-hide="">Search result</span>
     </div>
 </div>
