--- a/app/components/resultListPage/resultListPage.html
+++ b/app/components/resultListPage/resultListPage.html
@@ -12,10 +12,10 @@
         </div>
 
         <div class="col-lg-offset-4 col-lg-4 text-center">
-            <img ng-show="LoadMoreSpinner" width="100" height="100"  src="/app/src/img/ring-alt.gif">
-            <div ng-hide="LoadMoreSpinner">
+            <img ng-show="!propsList.length" width="100" height="100"  src="/app/src/img/ring-alt.gif">
+            <div ng-hide="!propsList.length">
                 <h2>{{statusInfo}}</h2>
-                <a  ng-click="loadMore()" class="loadMore" ng-show="checkQuantity">
+                <a  ng-click="loadPage()" class="loadMore">
                     <h3>Load more</h3>
                 </a>
             </div>
