--- a/app/components/resultListPage/resultListPage.html
+++ b/app/components/resultListPage/resultListPage.html
@@ -1,23 +1,22 @@
-<div class="text-center" ng-show="MainSpinner">
-    <img  src="/app/src/img/ring-alt.gif">
-</div>
-    <div class="text-center" ng-show="showError">
+ <div class="text-center" ng-show="showError">
         <h3 >No results, try again</h3>
         <h4 ui-sref="searchPage" class="loadMore">go back</h4>
     </div>
-
     <div ng-hide="showError">
         <div ng-repeat="item in propsList track by $index">
             <list-element item="item"></list-element>
         </div>
 
         <div class="col-lg-offset-4 col-lg-4 text-center">
-            <img ng-show="!propsList.length" width="100" height="100"  src="/app/src/img/ring-alt.gif">
-            <div ng-hide="!propsList.length">
+            <img ng-hide="propsList.length" width="100" height="100"  src="/app/src/img/ring-alt.gif">
+            <div ng-show="propsList.length">
                 <h2>{{statusInfo}}</h2>
-                <a  ng-click="loadPage()" class="loadMore">
-                    <h3>Load more</h3>
-                </a>
+                <div ng-hide="showLoadingMessage">
+                    <a ng-click="loadPage(); showLoading()" class="loadMore" ng-show="checkQuantity">
+                        <h3>Load more...</h3>
+                    </a>
+                </div>
+                <h3 ng-show="showLoadingMessage">Loading...</h3>
             </div>
         </div>
     </div>
