--- a/app/components/searchPage/searchPage.html
+++ b/app/components/searchPage/searchPage.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div>
     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus eget volutpat lorem. Vivamus a interdum augue,
     vitae viverra massa. Donec vel consequat justo, vel tempus arcu. Donec at orci leo. Praesent vehicula augue a ligula
     congue commodo. Nam vel orci enim. Phasellus viverra, eros convallis mollis scelerisque, ante arcu tincidunt eros,
@@ -10,12 +10,16 @@
     <div class="col-lg-12" style="padding: 0">
         <input class="form-control" ng-model="searchInput" style="margin-top: 10px">
         <div style="margin: 10px">
-            <button class="btn btn-default" ng-click="getUserInput(searchInput)">Go</button>
+            <button class="btn btn-default" ng-click="getUserInput()">Go</button>
             <button class="btn btn-default">My location</button>
         </div>
     </div>
-    <div class="list-group col-lg-8 row" style="margin-left: 10px">
-        <a class="list-group-item menuItem" ng-repeat="item in searchHistory | limitTo: 10" ng-click="getUserInput(item.input)">{{item.input + ' (' + item.total_results + ')'}}</a>
+    <div class="list-group col-lg-8" style="margin-left: 10px">
+        <a class="list-group-item menuItem"
+           ng-repeat="item in searchHistory | limitTo: 10"
+           ng-click="setItemInInput(item.input); getUserInput()">
+            {{item.input + ' (' + item.total_results + ')'}}
+        </a>
     </div>
 </div>
 
