--- a/app/components/resultListPage/resultListPage.html
+++ b/app/components/resultListPage/resultListPage.html
@@ -1,22 +1,26 @@
- <div class="text-center" ng-show="showError">
-        <h3 >No results, try again</h3>
-        <h4 ui-sref="searchPage" class="loadMore">go back</h4>
+<div class="text-center" ng-show="noResults">
+    <h3 >There were no properties found for the given location.</h3>
+    <h4 ui-sref="searchPage" class="loadMore">go back</h4>
+</div>
+<div class="text-center" ng-show="noConnection">
+    <h3 >You got some problem with internet connection</h3>
+    <h4 ui-sref="searchPage" class="loadMore">go back</h4>
+</div>
+<div ng-hide="noResults || noConnection">
+    <div ng-repeat="item in propsList track by $index">
+        <list-element item="item"></list-element>
     </div>
-    <div ng-hide="showError">
-        <div ng-repeat="item in propsList track by $index">
-            <list-element item="item"></list-element>
-        </div>
 
-        <div class="col-lg-offset-4 col-lg-4 text-center">
-            <img ng-hide="propsList.length" width="100" height="100"  src="/app/src/img/ring-alt.gif">
-            <div ng-show="propsList.length">
-                <h2>{{statusInfo}}</h2>
-                <div ng-hide="showLoadingMessage">
-                    <a ng-click="loadPage(); showLoading()" class="loadMore" ng-show="checkQuantity">
-                        <h3>Load more...</h3>
-                    </a>
-                </div>
-                <h3 ng-show="showLoadingMessage">Loading...</h3>
+    <div class="col-lg-offset-4 col-lg-4 text-center">
+        <img ng-hide="propsList.length" width="100" height="100"  src="/app/src/img/ring-alt.gif">
+        <div ng-show="propsList.length">
+            <h2>{{statusInfo}}</h2>
+            <div ng-hide="showLoadingMessage">
+                <a ng-click="loadPage(); showLoading()" class="loadMore" ng-show="checkQuantity">
+                    <h3>Load more...</h3>
+                </a>
             </div>
+            <h3 ng-show="showLoadingMessage">Loading...</h3>
         </div>
     </div>
+</div>
