--- a/app/components/resultListPage/resultListPage.html
+++ b/app/components/resultListPage/resultListPage.html
@@ -1,26 +1,17 @@
-<div class="text-center" ng-show="noResults">
-    <h3 >There were no properties found for the given location.</h3>
-    <h4 ui-sref="searchPage" class="loadMore">go back</h4>
+<div class="text-center">
+    <img  src="/app/src/img/ring-alt.gif" ng-hide="hideSpinner">
 </div>
-<div class="text-center" ng-show="noConnection">
-    <h3 >You got some problem with internet connection</h3>
-    <h4 ui-sref="searchPage" class="loadMore">go back</h4>
-</div>
-<div ng-hide="noResults || noConnection">
-    <div ng-repeat="item in propsList track by $index">
-        <list-element item="item"></list-element>
-    </div>
 
-    <div class="col-lg-offset-4 col-lg-4 text-center">
-        <img ng-hide="propsList.length" width="100" height="100"  src="/app/src/img/ring-alt.gif">
-        <div ng-show="propsList.length">
-            <h2>{{statusInfo}}</h2>
-            <div ng-hide="showLoadingMessage">
-                <a ng-click="loadPage(); showLoading()" class="loadMore" ng-show="checkQuantity">
-                    <h3>Load more...</h3>
-                </a>
-            </div>
-            <h3 ng-show="showLoadingMessage">Loading...</h3>
-        </div>
-    </div>
+<div ng-repeat="item in propsList track by $index">
+    <list-element item="item"></list-element>
+</div>
+
+<div ng-show="showLoadMore"  class="text-center col-lg-12 loadMoreBlock">
+    <h3>{{infoBar}}</h3>
+    <h3 ng-hide="showLoadingMessage" ng-click="loadPage(); showLoading()" class="text-link">Load more...</h3>
+    <h3 ng-show="showLoadingMessage">Loading...</h3>
+</div>
+<div class="text-center col-lg-12" ng-show="errorMessage">
+    <h2>{{errorMessage}}</h2>
+    <a ng-if="showLoadMore" ui-sref="searchPage" class="text-link">go back</a>
 </div>
